branches/wip/Archive/d02c3e462e6061b8f0b37ec20d6a6bc4-c944ac6b0eed3bfc48b1f78a894f6965/output
+ g++ -std=c++11 -O3 -march=native -Wall -Wextra -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:35:6: error: request for member ‘foo’ in ‘* p.Smart_pointer<T>::operator-><double>()’, which is of non-class type ‘double’
   p->foo();
      ^
